[gd_scene load_steps=5 format=3 uid="uid://b8n552riysv8"]

[ext_resource type="Script" path="res://scripts/file_explorer.gd" id="1_iqnrs"]
[ext_resource type="Texture2D" uid="uid://dcu7axhkamelo" path="res://loading.png" id="2_kbvq7"]

[sub_resource type="LabelSettings" id="LabelSettings_fgn0i"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xdson"]
font_color = Color(0, 0, 0, 1)

[node name="file explorer" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.392157, 0.498039, 0.745098, 1)
script = ExtResource("1_iqnrs")

[node name="beauty" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="beauty"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.152778
anchor_right = 0.184
anchor_bottom = 1.0
offset_right = 0.0319824
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="beauty"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.815
anchor_right = 1.0
anchor_bottom = 0.839506
offset_left = -0.384018
offset_top = -8.12006
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.208333
anchor_top = 0.0987654
anchor_right = 0.979167
anchor_bottom = 0.765432
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="pinned" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.123037
anchor_right = 0.139056
anchor_bottom = 0.357753
offset_left = -0.128
offset_top = 0.271999
offset_right = -0.192017
offset_bottom = 2.17596
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="pinned_container" type="GridContainer" parent="pinned"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="pinned_label" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.0238889
anchor_top = 0.0862716
anchor_right = 0.227847
anchor_bottom = 0.127901
offset_left = 4.48
offset_top = 0.0959854
offset_right = -115.48
offset_bottom = -0.88002
text = "Pinned Folders"
metadata/_edit_use_anchors_ = true

[node name="special" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.015
anchor_right = 0.146
anchor_bottom = 0.062
offset_left = 0.48
offset_top = 0.28
offset_right = 4.80798
offset_bottom = 7.824

[node name="pin" type="Button" parent="special"]
layout_mode = 2
text = "pin
"

[node name="new_folder" type="Button" parent="special"]
layout_mode = 2
text = "new folder"

[node name="up" type="Button" parent="special"]
layout_mode = 2
text = "up"

[node name="name" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.227
anchor_top = 0.918
anchor_right = 0.227
anchor_bottom = 0.918
offset_left = -19.504
offset_top = -12.864
offset_right = 20.496
offset_bottom = 13.136
text = "Path"

[node name="path" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.253
anchor_top = 0.894
anchor_right = 0.931
anchor_bottom = 0.941
offset_left = -0.456024
offset_top = -0.312012
offset_right = 0.487915
offset_bottom = 0.231995
grow_horizontal = 2
grow_vertical = 0

[node name="actions" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.967
anchor_top = 0.941
anchor_right = 0.967
anchor_bottom = 0.941
offset_left = -28.9841
offset_top = -32.768
offset_right = 28.0159
offset_bottom = 33.232

[node name="open" type="Button" parent="actions"]
layout_mode = 2
text = "open"

[node name="cancel" type="Button" parent="actions"]
layout_mode = 2
text = "cancel"

[node name="add_folder" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -48.0
offset_right = -144.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.788235, 1, 1, 1)

[node name="name" type="Label" parent="add_folder"]
layout_mode = 0
offset_left = 3.0
offset_top = 31.0
offset_right = 43.0
offset_bottom = 57.0
text = "path
"
label_settings = SubResource("LabelSettings_fgn0i")

[node name="title" type="Label" parent="add_folder"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.0
offset_right = 73.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Create new folder?"
label_settings = SubResource("LabelSettings_xdson")

[node name="newname" type="LineEdit" parent="add_folder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -15.5
offset_right = -73.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="addf" type="Button" parent="add_folder"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -22.5
offset_right = -15.0
offset_bottom = 8.5
grow_horizontal = 0
grow_vertical = 2
text = "add"

[node name="cancelf" type="Button" parent="add_folder"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 13.5
offset_right = -7.0
offset_bottom = 44.5
grow_horizontal = 0
grow_vertical = 2
text = "cancel"

[node name="search_bar" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.354167
anchor_top = 0.0246914
anchor_right = 0.861987
anchor_bottom = 0.074
offset_right = -0.00952148
offset_bottom = -0.952
metadata/_edit_use_anchors_ = true

[node name="search" type="Label" parent="search_bar"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.31453
anchor_right = 0.0850545
anchor_bottom = 0.870774
offset_right = -15.9972
offset_bottom = -0.994001
text = "search (caps-sensitive):"
metadata/_edit_use_anchors_ = true

[node name="tip" type="Label" parent="search_bar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.01639
anchor_right = 1.09839
anchor_bottom = 0.742
offset_right = -0.0160027
offset_bottom = -0.00200081
text = "press enter to find"
metadata/_edit_use_anchors_ = true

[node name="repopulate" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -76.0
offset_right = 142.0
offset_bottom = -24.0
grow_vertical = 2
text = "Start metadata 
filter?"

[node name="filter_check" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -48.0
offset_right = 132.0
offset_bottom = -24.0
grow_vertical = 2

[node name="filters_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -12.0
offset_right = 78.0
offset_bottom = 14.0
grow_vertical = 2
text = "Filters:"

[node name="metadata_filters" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -12.0
offset_right = 131.0
offset_bottom = 8.0
grow_vertical = 2
item_count = 2
fit_to_longest_item = false
popup/item_0/text = "no filter"
popup/item_0/id = 0
popup/item_1/text = "test"
popup/item_1/id = 1

[node name="loading" type="TextureRect" parent="."]
visible = false
layout_mode = 2
offset_left = 448.0
offset_top = 208.0
offset_right = 872.0
offset_bottom = 346.0
texture = ExtResource("2_kbvq7")

[node name="DateFilter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0138889
anchor_top = 0.555556
anchor_right = 0.111389
anchor_bottom = 0.889161
offset_right = -0.32
offset_bottom = -0.176003

[node name="YearLabel" type="Label" parent="DateFilter"]
layout_mode = 2
text = "Choose Year
"

[node name="YearButton" type="OptionButton" parent="DateFilter"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "2024"
popup/item_0/id = 0
popup/item_1/text = "2023"
popup/item_1/id = 1
popup/item_1/disabled = true

[node name="MonthLabel" type="Label" parent="DateFilter"]
layout_mode = 2
text = "Choose Month
"

[node name="MonthButton" type="OptionButton" parent="DateFilter"]
layout_mode = 2
item_count = 12
selected = 2
popup/item_0/text = "January"
popup/item_0/id = 0
popup/item_1/text = "February"
popup/item_1/id = 1
popup/item_2/text = "March"
popup/item_2/id = 2
popup/item_3/text = "April"
popup/item_3/id = 3
popup/item_4/text = "May"
popup/item_4/id = 4
popup/item_4/disabled = true
popup/item_5/text = "June"
popup/item_5/id = 5
popup/item_5/disabled = true
popup/item_6/text = "July"
popup/item_6/id = 6
popup/item_6/disabled = true
popup/item_7/text = "August"
popup/item_7/id = 7
popup/item_7/disabled = true
popup/item_8/text = "September"
popup/item_8/id = 8
popup/item_8/disabled = true
popup/item_9/text = "October"
popup/item_9/id = 9
popup/item_9/disabled = true
popup/item_10/text = "November"
popup/item_10/id = 10
popup/item_10/disabled = true
popup/item_11/text = "December"
popup/item_11/id = 11
popup/item_11/disabled = true

[node name="WeekLabel" type="Label" parent="DateFilter"]
layout_mode = 2
text = "Choose Week"

[node name="WeekButton" type="OptionButton" parent="DateFilter"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3

[node name="DateFilterButton" type="Button" parent="DateFilter"]
layout_mode = 2
text = "Go"

[connection signal="pressed" from="special/pin" to="." method="_on_pin_pressed"]
[connection signal="pressed" from="special/new_folder" to="." method="_on_new_folder_pressed"]
[connection signal="pressed" from="special/up" to="." method="_on_up_pressed"]
[connection signal="text_submitted" from="path" to="." method="_on_path_text_submitted"]
[connection signal="pressed" from="actions/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="actions/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="add_folder/addf" to="." method="_on_addf_pressed"]
[connection signal="pressed" from="add_folder/cancelf" to="." method="_on_cancelf_pressed"]
[connection signal="text_submitted" from="search_bar" to="." method="_on_search_bar_text_submitted"]
[connection signal="toggled" from="filter_check" to="." method="_on_filter_check_toggled"]
[connection signal="item_selected" from="metadata_filters" to="." method="_on_metadata_filters_item_selected"]
[connection signal="pressed" from="DateFilter/DateFilterButton" to="." method="_on_date_filter_button_pressed"]
